Fixed wrong docID being written in the output files

--- a/ES_Interactions.ipynb
+++ b/ES_Interactions.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8677c300",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "  'eligibility': '\\n      \\n        Inclusion Criteria:\\r\\n\\r\\n          -  diagnosed with Congenital Adrenal Hyperplasia (CAH)\\r\\n\\r\\n          -  normal ECG during baseline evaluation\\r\\n\\r\\n        Exclusion Criteria:\\r\\n\\r\\n          -  history of liver disease, or elevated liver function tests\\r\\n\\r\\n          -  history of cardiovascular disease\\r\\n      \\n    '}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c33ffb6c",
    "metadata": {
     "scrolled": true
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b3575708",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
        "  'eligibility': \"\\n      \\n        DISEASE CHARACTERISTICS: Histologically confirmed malignant glioma - Recurrent glioblastoma\\r\\n        - Anaplastic astrocytoma - Mixed anaplastic glioma For recurrent glioblastoma: Required\\r\\n        documented progression must include an increase in tumor size of at least 25% or appearance\\r\\n        of new lesion For anaplastic astrocytoma or mixed anaplastic glioma: Must have measurable,\\r\\n        contrast enhancing disease on postoperative CT or MRI scan No postoperative radiation or\\r\\n        chemotherapy If patients have received prior brachytherapy or stereotactic radiosurgery,\\r\\n        they must have confirmation of true progressive disease rather than radiation necrosis by\\r\\n        PET scanning or biopsy\\r\\n\\r\\n        PATIENT CHARACTERISTICS: Age: 18 and over Performance status: Karnofsky 60-100% Life\\r\\n        expectancy: Not specified Hematopoietic: WBC at least 3,500/mm3 Absolute neutrophil count\\r\\n        at least 1,800/mm3 Platelet count at least 125,000/mm3 Hemoglobin at least 9 g/dL\\r\\n        (transfusion allowed) Hepatic: Bilirubin less than 1.5 mg/dL SGOT less than 2.0 times upper\\r\\n        limit of normal Renal: Creatinine less than 1.5 mg/dL OR Creatinine clearance greater than\\r\\n        70 mL/min Cardiovascular: No uncontrolled arrhythmias or conduction defects No unstable or\\r\\n        newly diagnosed angina pectoris No New York Heart Association class II-IV heart disease No\\r\\n        congestive heart failure No major problems with edema (e.g., severe Cushing's syndrome,\\r\\n        residual leg swelling from deep-vein thrombosis) No recent coronary artery disease No\\r\\n        poorly controlled hypertension (diastolic greater than 110 mmHg and systolic greater than\\r\\n        180 mmHg) Pulmonary: DLCO greater than 80% of expected value Other: HIV negative No major\\r\\n        psychiatric illness No other prior malignancy except adequately treated basal cell or\\r\\n        squamous cell skin cancer, in situ cervical cancer, adequately treated stage I or II cancer\\r\\n        from which the patient is currently in complete remission, or any other cancer from which\\r\\n        the patient has been free of disease for 5 years Not pregnant or nursing Adequate\\r\\n        contraception required of all fertile patients\\r\\n\\r\\n        PRIOR CONCURRENT THERAPY: Biologic therapy: No concurrent biologic therapy Chemotherapy: No\\r\\n        prior nitrosourea or temozolomide No more than 1 prior chemotherapy regimen allowed for\\r\\n        patients with glioblastoma At least 6 weeks since mitomycin or procarbazine and recovered\\r\\n        At least 4 weeks since other prior chemotherapy and recovered No other concurrent\\r\\n        chemotherapy Endocrine therapy: If receiving steroids, must be on a stable steroid dose for\\r\\n        at least 72 hours prior to study No other concurrent endocrine therapy Radiotherapy: At\\r\\n        least 6 weeks since radiotherapy No greater than 10-20% of marrow irradiated in prior\\r\\n        radiotherapy No other concurrent radiotherapy Surgery: Surgery allowed\\r\\n      \\n    \"}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,6 +472,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "786054c7",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NCT00003176'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp['hits']['hits'][0]['_source']['doc_id']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "72098cdc",
    "metadata": {},
@@ -481,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c0f66c46",
    "metadata": {},
    "outputs": [
@@ -519,7 +542,51 @@
       "Query  27  got 10000 Hits\n",
       "Query  28  got 10000 Hits\n",
       "Query  29  got 10000 Hits\n",
-      "Query  30  got 10000 Hits\n"
+      "Query  30  got 10000 Hits\n",
+      "Query  31  got 10000 Hits\n",
+      "Query  32  got 10000 Hits\n",
+      "Query  33  got 10000 Hits\n",
+      "Query  34  got 10000 Hits\n",
+      "Query  35  got 10000 Hits\n",
+      "Query  36  got 10000 Hits\n",
+      "Query  37  got 10000 Hits\n",
+      "Query  38  got 10000 Hits\n",
+      "Query  39  got 10000 Hits\n",
+      "Query  40  got 10000 Hits\n",
+      "Query  41  got 10000 Hits\n",
+      "Query  42  got 10000 Hits\n",
+      "Query  43  got 10000 Hits\n",
+      "Query  44  got 10000 Hits\n",
+      "Query  45  got 10000 Hits\n",
+      "Query  46  got 10000 Hits\n",
+      "Query  47  got 10000 Hits\n",
+      "Query  48  got 10000 Hits\n",
+      "Query  49  got 10000 Hits\n",
+      "Query  50  got 10000 Hits\n",
+      "Query  51  got 10000 Hits\n",
+      "Query  52  got 10000 Hits\n",
+      "Query  53  got 10000 Hits\n",
+      "Query  54  got 10000 Hits\n",
+      "Query  55  got 10000 Hits\n",
+      "Query  56  got 10000 Hits\n",
+      "Query  57  got 10000 Hits\n",
+      "Query  58  got 10000 Hits\n",
+      "Query  59  got 10000 Hits\n",
+      "Query  60  got 10000 Hits\n",
+      "Query  61  got 10000 Hits\n",
+      "Query  62  got 10000 Hits\n",
+      "Query  63  got 10000 Hits\n",
+      "Query  64  got 10000 Hits\n",
+      "Query  65  got 10000 Hits\n",
+      "Query  66  got 10000 Hits\n",
+      "Query  67  got 10000 Hits\n",
+      "Query  68  got 10000 Hits\n",
+      "Query  69  got 10000 Hits\n",
+      "Query  70  got 10000 Hits\n",
+      "Query  71  got 10000 Hits\n",
+      "Query  72  got 10000 Hits\n",
+      "Query  73  got 10000 Hits\n",
+      "Query  74  got 10000 Hits\n"
      ]
     }
    ],
@@ -563,7 +630,9 @@
     "    \n",
     "    #Store only the docID and the scores\n",
     "    for hit in hits:\n",
-    "        hits_list.append([hit['_id'], hit['_score']])\n",
+    "#         hits_list.append([hit['_id'], hit['_score']])\n",
+    "        hits_list.append([hit['_source']['doc_id'], hit['_score']])\n",
+    "\n",
     "        \n",
     "    #Write output onto file named as the ID of the query\n",
     "    hits_file_name = 'ES_outputs/'+str(id+1)+'.csv'\n",
@@ -574,8 +643,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "754e62ed",
+   "execution_count": 14,
+   "id": "21a69bd3",
    "metadata": {},
    "outputs": [
     {
@@ -606,28 +675,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>186624</td>\n",
-       "      <td>124.377304</td>\n",
+       "      <td>NCT04236843</td>\n",
+       "      <td>144.775830</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>197815</td>\n",
-       "      <td>118.727760</td>\n",
+       "      <td>NCT01599546</td>\n",
+       "      <td>138.426820</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>265040</td>\n",
-       "      <td>117.103160</td>\n",
+       "      <td>NCT01775501</td>\n",
+       "      <td>137.802810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>162790</td>\n",
-       "      <td>113.149770</td>\n",
+       "      <td>NCT04568005</td>\n",
+       "      <td>137.796620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>145249</td>\n",
-       "      <td>113.108060</td>\n",
+       "      <td>NCT02088866</td>\n",
+       "      <td>133.098890</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -635,60 +704,60 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>62943</td>\n",
-       "      <td>44.418755</td>\n",
+       "      <th>9889</th>\n",
+       "      <td>NCT00200538</td>\n",
+       "      <td>42.404560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>16011</td>\n",
-       "      <td>44.418575</td>\n",
+       "      <th>9890</th>\n",
+       "      <td>NCT03908749</td>\n",
+       "      <td>42.403885</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>93361</td>\n",
-       "      <td>44.417557</td>\n",
+       "      <th>9891</th>\n",
+       "      <td>NCT02674243</td>\n",
+       "      <td>42.403736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>270166</td>\n",
-       "      <td>44.417347</td>\n",
+       "      <th>9892</th>\n",
+       "      <td>NCT00468065</td>\n",
+       "      <td>42.401830</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>80315</td>\n",
-       "      <td>44.416700</td>\n",
+       "      <th>9893</th>\n",
+       "      <td>NCT04844515</td>\n",
+       "      <td>42.400760</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 2 columns</p>\n",
+       "<p>9894 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           0           1\n",
-       "0     186624  124.377304\n",
-       "1     197815  118.727760\n",
-       "2     265040  117.103160\n",
-       "3     162790  113.149770\n",
-       "4     145249  113.108060\n",
-       "...      ...         ...\n",
-       "9995   62943   44.418755\n",
-       "9996   16011   44.418575\n",
-       "9997   93361   44.417557\n",
-       "9998  270166   44.417347\n",
-       "9999   80315   44.416700\n",
+       "                0           1\n",
+       "0     NCT04236843  144.775830\n",
+       "1     NCT01599546  138.426820\n",
+       "2     NCT01775501  137.802810\n",
+       "3     NCT04568005  137.796620\n",
+       "4     NCT02088866  133.098890\n",
+       "...           ...         ...\n",
+       "9889  NCT00200538   42.404560\n",
+       "9890  NCT03908749   42.403885\n",
+       "9891  NCT02674243   42.403736\n",
+       "9892  NCT00468065   42.401830\n",
+       "9893  NCT04844515   42.400760\n",
        "\n",
-       "[10000 rows x 2 columns]"
+       "[9894 rows x 2 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Sample line of code to retrieve stored file\n",
-    "hits_df = pd.read_csv('ES_outputs/2.csv', sep=',', header=None)\n",
+    "hits_df = pd.read_csv('ES_outputs/75.csv', sep=',', header=None)\n",
     "hits_df"
    ]
   }
