All metrics calculated. Overall avg metrics calculated across variants

--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "4  177.752863  357.818129  230.682298  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,13 +202,25 @@
     "    return ndcg_score(y_true, y_score, k=k)\n",
     "\n",
     "    \n",
+    "def get_precision(y_true, y_score, k):\n",
+    "\n",
+    "    return np.sum(y_score[:k+1])/np.sum(y_true[:k+1])\n",
+    "\n",
+    "\n",
+    "def get_mean_reciprocal_score(y_score):\n",
+    "\n",
+    "    return 1/(np.argmax(y_score) + 1)\n",
+    "\n",
+    "\n",
     "metrics = {}\n",
     "\n",
     "for query_id, query_results in BM25_results.items():\n",
     "\n",
     "    metrics[query_id] = {\n",
     "                            \"ndcg@5\": {},\n",
-    "                            \"ndcg@10\": {}\n",
+    "                            \"ndcg@10\": {},\n",
+    "                            \"precision@10\": {},\n",
+    "                            \"mean_reciprocal_rank\": {}\n",
     "                        }\n",
     "\n",
     "    query_results[\"relevance\"].mask(query_results[\"relevance\"] == 2, 1, inplace=True)\n",
@@ -220,31 +232,113 @@
     "        y_score = np.asarray([query_results[[\"relevance\", variant]].sort_values(by=variant, ascending=False)[\"relevance\"].fillna(0).tolist()])\n",
     "        \n",
     "        metrics[query_id][\"ndcg@5\"][variant] = get_ndcg_score(y_true, y_score, 5)\n",
-    "        metrics[query_id][\"ndcg@10\"][variant] = get_ndcg_score(y_true, y_score, 10)"
+    "        metrics[query_id][\"ndcg@10\"][variant] = get_ndcg_score(y_true, y_score, 10)\n",
+    "        metrics[query_id][\"precision@10\"][variant] = get_precision(y_true, y_score, 10)\n",
+    "        metrics[query_id][\"mean_reciprocal_rank\"][variant] = get_mean_reciprocal_score(y_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ndcg@5</th>\n",
+       "      <th>ndcg@10</th>\n",
+       "      <th>precision@10</th>\n",
+       "      <th>mean_reciprocal_rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bm25</th>\n",
+       "      <td>0.034372</td>\n",
+       "      <td>0.034379</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.427078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bm25Plus</th>\n",
+       "      <td>0.059791</td>\n",
+       "      <td>0.059797</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.447798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bm25L</th>\n",
+       "      <td>0.016406</td>\n",
+       "      <td>0.016415</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.237764</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'ndcg@5': {'bm25': 0.04819277108433735,\n",
-       "  'bm25Plus': 0.18072289156626503,\n",
-       "  'bm25L': 0.036144578313253004},\n",
-       " 'ndcg@10': {'bm25': 0.04819277108433735,\n",
-       "  'bm25Plus': 0.18072289156626506,\n",
-       "  'bm25L': 0.03614457831325301}}"
+       "            ndcg@5   ndcg@10  precision@10  mean_reciprocal_rank\n",
+       "bm25      0.034372  0.034379           1.0              0.427078\n",
+       "bm25Plus  0.059791  0.059797           1.0              0.447798\n",
+       "bm25L     0.016406  0.016415           1.0              0.237764"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "n_queries = 75\n",
+    "\n",
+    "mean_metrics = {\n",
+    "                    \"ndcg@5\": {\"bm25\": 0, \"bm25Plus\": 0, \"bm25L\": 0},\n",
+    "                    \"ndcg@10\": {\"bm25\": 0, \"bm25Plus\": 0, \"bm25L\": 0},\n",
+    "                    \"precision@10\": {\"bm25\": 0, \"bm25Plus\": 0, \"bm25L\": 0},\n",
+    "                    \"mean_reciprocal_rank\": {\"bm25\": 0, \"bm25Plus\": 0, \"bm25L\": 0}\n",
+    "                }\n",
+    "\n",
+    "# Sum across queries\n",
+    "for query_id, query_metrics in metrics.items():\n",
+    "\n",
+    "    for metric in [\"ndcg@5\", \"ndcg@10\", \"precision@10\", \"mean_reciprocal_rank\"]:\n",
+    "\n",
+    "        for variant in [\"bm25\", \"bm25Plus\", \"bm25L\"]:\n",
+    "\n",
+    "            mean_metrics[metric][variant] += query_metrics[metric][variant]\n",
+    "\n",
+    "# Divide be total number of queries\n",
+    "for metric in [\"ndcg@5\", \"ndcg@10\", \"precision@10\", \"mean_reciprocal_rank\"]:\n",
+    "\n",
+    "    for variant in [\"bm25\", \"bm25Plus\", \"bm25L\"]:\n",
+    "\n",
+    "        mean_metrics[metric][variant] /= n_queries\n",
+    "\n",
+    "\n",
+    "pd.DataFrame.from_dict(mean_metrics)\n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
